cluster/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: insecure-ns
  labels:
    name: insecure-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name: secure-ns
  labels:
    name: secure-ns
    pod-security.kubernetes.io/enforce: privileged
    # pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/enforce-version: v1.26
    pod-security.kubernetes.io/audit-version: v1.26
    pod-security.kubernetes.io/warn-version: v1.26
